[AI] Compatible java 27